# biiocpp

./: CMakeLists.txt  biio-config.cmake.in  flake.nix
include/biio/: bit_cast.hpp  reader.hpp
src/: reader.cpp
test/: reader_test.cpp
